--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.jar=/home/mr3o5/Downloads/java/commons-fileupload-1.3.jar
+file.reference.commons-io-2.6.jar=/home/mr3o5/Downloads/java/commons-io-2.6-bin/commons-io-2.6/commons-io-2.6.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=/home/mr3o5/Downloads/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47-bin.jar
 file.reference.mysql-connector-java-5.1.47.jar=/home/mr3o5/Downloads/mysql-connector-java-5.1.47/mysql-connector-java-5.1.47.jar
 includes=**
@@ -40,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.commons-fileupload-1.3.jar}:\
+    ${file.reference.commons-io-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
